Bug 101972 - Widgets in dialogs are flickering while modifier key are being pressed (default rendering)
Summary: Widgets in dialogs are flickering while modifier key are being pressed (defau...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All Windows (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0 target:5.3.1 target:5.2.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-09-07 18:52 UTC by Gabriele Ponzo
Modified: 2017-02-13 08:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriele Ponzo 2016-09-07 18:52:57 UTC
Versione: 5.1.4.2 (x64)
Build ID: f99d75f39f1c57ebdd7ffc5f42867c12031db97a
Thread CPU: 4; Versione SO: Windows 6.19; Resa interfaccia: predefinito; 
Versione locale: it-IT (it_IT)

1. Open a Dialog Window
2. Hold CRTL for a while and look at widgets
Result: widgets start flashing (redrawing).
Expected behavior: not flashing

It happens with every modifier key, such as CTRL (both ones) or ALT (both ones)
Comment 1 Gabriele Ponzo 2016-09-07 19:47:35 UTC
Still present in Version 5.2.1.2
Comment 2 Buovjaga 2016-10-06 10:39:15 UTC
Tried with image properties, open and save dialogs. No flashing.

Win 7 Pro 64-bit Version: 5.3.0.0.alpha0+
Build ID: 7da2f3ce9f7b049c177a735a146dae84a764d3f7
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-10-04_03:49:06
Locale: fi-FI (fi_FI); Calc: CL

Win 7 Pro 64-bit, Version: 5.2.2.2 (x64)
Build ID: 8f96e87c890bf8fa77463cd4b640a2312823f3ad
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: fi-FI (fi_FI); Calc: CL
Comment 3 Gabriele Ponzo 2016-10-06 19:22:22 UTC
I can still replicate the bug on another (customer's) PC, BUT this time it happens if you press repeatedly CRTL or ALT, and NOT keeping (one of) them pressed.

File Open and Save are not common dialog windows from LO, they are MS Windows File Requesters, unless differently specified in LO options. So they're not the right dialogs to test, while Image Properties is a good one. I used that for this test.

Win7 Home Premium 64bit Italiaan
Versione: 5.2.2.2 (x64)
Build ID: …f3ad (I'm copying manually ;)
Thread CPU: 2; Versione SO: Windows 6.1; Resa interfaccia: predefinito; 
Versione locale: it-IT (it_IT); Calc: group
Comment 4 Gabriele Ponzo 2016-10-06 19:23:10 UTC Comment hidden (obsolete)
Comment 5 Aron Budea 2016-10-11 03:51:27 UTC
If I go to image Properties (which takes me to Wrap tab by default):
-pressing Alt repeatedly causes "None" to flash,
-pressing Alt or Ctrl continuously causes flickering to run through all the widgets.

Even the menu bar is flickering if I run my mouse pointer across.

No flickering in native Windows Open/Save/etc. dialogs, though. Opetions menu doesn't flicker, either.
Comment 6 Gabriele Ponzo 2016-11-29 23:13:55 UTC
(In reply to Aron Budea from comment #5)
> If I go to image Properties (which takes me to Wrap tab by default):
> -pressing Alt repeatedly causes "None" to flash,
> -pressing Alt or Ctrl continuously causes flickering to run through all the
> widgets.
> 
> Even the menu bar is flickering if I run my mouse pointer across.
> 
> No flickering in native Windows Open/Save/etc. dialogs, though. Opetions
> menu doesn't flicker, either.

So you can confirm my bug: what's the version of LO?
Comment 7 Aron Budea 2016-11-29 23:48:03 UTC
(In reply to Gabriele Ponzo from comment #6)
> So you can confirm my bug: what's the version of LO?

I can reproduce this even in current 5.2.3.3 and 5.3beta1 versions in Windows 7.
Comment 8 Aron Budea 2017-02-08 13:25:45 UTC Comment hidden (bibisection)
Comment 9 Aron Budea 2017-02-08 13:27:43 UTC
This is a regression, and the flickering during a modifier key being pressed started with the commit referenced below. Yes, the commit says gtk, yet it affects Windows. It seems to have gotten slightly better over time, but still very noticeable (not sure if reverse-bibisecting that commit is worth, let me know if it is).

Adding Cc: to Simon Long as author, also adding Cc: to Caolán McNamara as committer. Please take a look sometimes.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=74407aef94b6d8dfdd69891c4a6e578587ef3e71
author		Simon Long <simon@raspberrypi.org>	2015-07-08 17:02:50 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2015-07-09 15:07:24 (GMT)

"tdf#92630 Enable auto-accelerator behaviour for gtk"
Comment 10 Caolán McNamara 2017-02-09 10:25:20 UTC
I can't reproduce this with gen under Linux, probably hardware too fast or better rendering, but I have a fair idea how to simply fix it for the platforms that don't have auto accels
Comment 11 Commit Notification 2017-02-09 10:29:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f67dc04cfdd9e63a45ec6c8bc00829bce8f17d4b

Resolves: tdf#101972 skip invalidating labels on alt if autoaccel is disabled

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2017-02-09 10:35:02 UTC
I'm reasonably confident that will stop flickering on windows, backports for 5-3 and 5-2 in gerrit
Comment 13 Buovjaga 2017-02-10 12:54:20 UTC
I first confirmed the flickering in an older build.

With the fresh build the flickering is gone.

Win 10 64-bit
Version: 5.4.0.0.alpha0+
Build ID: 54d5b1828ec73d0475e0ddb6e31394a7e1904a1b
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-02-09_23:41:14
Locale: fi-FI (fi_FI); Calc: group
Comment 14 Gabriele Ponzo 2017-02-10 14:13:44 UTC
Many thanks to all of you guys!

I'm proud to have been useful to improve the code.

Thanks particularly to Caolan for taking into consideration this bug, surely not blocking, but still important for the cleanliness of code.
Comment 15 Commit Notification 2017-02-13 08:16:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1cd4913603d112b47106939de350aaca3143d37a&h=libreoffice-5-3

Resolves: tdf#101972 skip invalidating labels on alt if autoaccel is disabled

It will be available in 5.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2017-02-13 08:27:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0d8746c091ce3e70340c431da8d35d453d2b3b2c&h=libreoffice-5-2

Resolves: tdf#101972 skip invalidating labels on alt if autoaccel is disabled

It will be available in 5.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.