Resolves: tdf#101972 skip invalidating labels on alt if autoaccel is disabled

so no Invalidate will be called if auto accelerators are not enabled
so there should be no blinking under windows

(cherry picked from commit f67dc04cfdd9e63a45ec6c8bc00829bce8f17d4b)

Change-Id: Iccc5dad7af41f39ac02d3be93e935f2d926a82a6
Reviewed-on: https://gerrit.libreoffice.org/34077
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>